--- a/style_media.css
+++ b/style_media.css
@@ -1,18 +1,25 @@
 @media (max-width: 810px) {
+    h2 {
+        font-size: 28px;
+        line-height: 34px;
+    }
+
+    .header {
+        height: auto;
+    }
 
     .left_colomn_head,
     .right_colomn_head {
-        width: 50%;
-        min-width: 0;
+        display: none;
     }
 
     .wrap__header {
-        margin: 0;
-        position: absolute;
-        top: 50px;
-        left: 50%;
-        transform: translateX(-50%);
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        gap: 0;
         padding: 15px;
+        border: none;
     }
 
     .navigation,
@@ -28,7 +35,7 @@
     }
 
     .navigation {
-        margin-bottom: 2px;
+        margin: 3px 0px;
     }
 
     .navigation>.left_colomn {
@@ -46,7 +53,7 @@
     }
 
     .item-menu a:hover {
-        all: unset
+        all: unset;
     }
 
     .left_colomn {
@@ -54,5 +61,17 @@
         min-width: 0;
         text-align: left;
         padding: 10px 20px;
+
+    }
+
+    .link_project:hover {
+        all: unset;
+    }
+
+    .logo-github,
+    .logo-rs_school,
+    .logo-inno,
+    .logo-in {
+        height: 40px;
     }
 }
